--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,9 @@ name = "pypi"
 fastapi = "*"
 uvicorn = "*"
 pytest = "*"
-requests = "*"
+aiohttp = "*"
+cchardet = "*"
+aiodns = "*"
 
 [dev-packages]
 
