--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,7 +13,7 @@ on: [push]
 jobs:
   unit-tests:
 
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
